# PursuitEvasionWithMap

./: EvalCondMatrix.m  FindBestTimes_modified.m  OccGridPathPlan.m  OccupancyGrid2Matrix.m  PE_mazesWithQuads.m  PE_switchingRDEQ.m  PE_switchingRDEQ_Maps.m  TimeVectors.m  boundaryCond.m  callbackEvaPose.m  callbackPurPose.m  checkIntersection.m  checkSafeIntersection.m  checkWallBounce.m  checkWallBounceAndPropagateDynamics.m  convertNodeLocationsToXYZ.m  convertPathMatrixToPointPairs.m  countPaths.m  countPaths3D.m  cross2.m  distToLine.m  find_path_prm.m  fitPiecewisePoly.m  genControlsFromNashmatAndWaypoints.m  generateCostMatrices.m  generateCostMatrices_map.m  generateCostMatrixMazeGame.m  generateCullSolveProcess.m  getLineEquation.m  getPathCost.m  isSafeFromFutureCollision.m  isSafeFromFutureCollision2D.m  isValidCell.m  isValidCell3D.m  linearKFStep.m  mapEdges.m  minSnapGradientDescent.m  motionConstraints.m  nearestWallInformation.m  processNashType0.m  (+12 more)
rosPE_link/: CMakeLists.txt  package.xml
rosPE_link/msg/: controlstack.txt  posestack.txt
